Fixed header title alignment bug

--- a/style.css
+++ b/style.css
@@ -75,14 +75,14 @@ header h1
 {
 	margin-left:15px;
 	color:#fff;
-	line-height:0;
+	line-height:42px;
 	font-size:42px;
 	display:inline-block;
 }
 header a.button
 {
 	float:right;
-	margin-top:-2px;
+	margin-top:2px;
 }
 
 #banner
